--- a/front-end/src/AboutUs.css
+++ b/front-end/src/AboutUs.css
@@ -1,30 +1,14 @@
 h1 {
-    padding: 20px;
+    margin-bottom: 20px;
 }
 
-.photoOfMe img{
-    width: 400px;
+p {
+    width: 75%;
+    margin: auto;
+}
+
+img {
+    margin-top: 25px;
+    width: 30%;
     height: auto;
-}
-
-.content {
-    display: flex;
-    padding-top: 20px;
-}
-
-.written {
-    width: 48%;
-    padding-left: 10px;
-}
-
-.written p {
-    margin-bottom: 10px;
-}
-
-.written h2 {
-    padding: 10px;
-}
-
-.image {
-    width: 48%;
 }
